RESOLVED FIXED209509
Ignore in-app browser privacy checks for apps with com.apple.private.applemediaservices entitlement
https://bugs.webkit.org/show_bug.cgi?id=209509
Summary Ignore in-app browser privacy checks for apps with com.apple.private.applemed...
Kate Cheney
Reported 2020-03-24 15:16:39 PDT
These applications do not need the additional quirks provided by the in-app browser privacy checks.
Attachments
Patch (3.04 KB, patch)
2020-03-24 15:23 PDT, Kate Cheney
no flags
Patch (3.07 KB, patch)
2020-03-24 15:29 PDT, Kate Cheney
no flags
Patch (3.06 KB, patch)
2020-03-24 15:51 PDT, Kate Cheney
no flags
Kate Cheney
Comment 1 2020-03-24 15:17:00 PDT
Kate Cheney
Comment 2 2020-03-24 15:23:57 PDT
Kate Cheney
Comment 3 2020-03-24 15:29:59 PDT
Brent Fulgham
Comment 4 2020-03-24 15:44:52 PDT
Comment on attachment 394425 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=394425&action=review Looks great! Just fix the include before landing. > Source/WebKit/UIProcess/WebPageProxy.cpp:186 > +#include <wtf/cocoa/Entitlements.h> This needs to be inside the #if PLATFORM(COCOA)
Kate Cheney
Comment 5 2020-03-24 15:51:11 PDT
Kate Cheney
Comment 6 2020-03-24 15:51:38 PDT
Thanks! Just going to make sure this compiles on gtk before landing.
Brent Fulgham
Comment 7 2020-03-24 15:56:36 PDT
Comment on attachment 394428 [details] Patch Perfect! r=me
EWS
Comment 8 2020-03-24 16:51:11 PDT
Committed r258958: <https://trac.webkit.org/changeset/258958> All reviewed patches have been landed. Closing bug and clearing flags on attachment 394428 [details].
Note You need to log in before you can comment on or make changes to this bug.