Ignore in-app browser privacy checks for apps with com.apple.private.applemediaservices entitlement https://bugs.webkit.org/show_bug.cgi?id=209509 <rdar://problem/60750956>

Reviewed by Brent Fulgham.

* UIProcess/WebPageProxy.cpp:
(WebKit::m_ignoresAppBoundDomains):
(WebKit::WebPageProxy::setIsNavigatingToAppBoundDomain):
* UIProcess/WebPageProxy.h:


Canonical link: https://commits.webkit.org/222444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@258958 268f45cc-cd09-0410-ab3c-d52691b4dbfc